# MorgenCalendar-Telegram-Bot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  database.py  docker-compose.yml  formatters.py  i18n.py  main.py  morgen_client.py  project_state_report.md  pyproject.toml  requirements.txt  test_and_build.sh
.github/workflows/: deploy.yml
handlers/: agenda.py  basic.py  events.py  settings.py
locales/: en.json  it.json
tasks/: scheduler.py
tests/: test_add_regex.py  test_calendar_matcher.py  test_date_parser.py  test_encryption.py  test_event_filter_diagnosis.py  test_inline_calendar.py
utils/: calendar_matcher.py  date_parser.py  encryption.py  inline_calendar.py
